@@ -54,5 +54,7 @@ AssemblyPlantBuilding.move_matrix = [0,0,1,1,0,0,1,1,0,1,0,1,0,1,1,0,1,1,1,0,0,1
 AssemblyPlantBuilding.cell_padding = {x: 2, y: 2};
 AssemblyPlantBuilding.image_size = {x: 119, y: 117};
 AssemblyPlantBuilding.image_padding = {x: -1, y: -3};
+AssemblyPlantBuilding.shadow_image_size = {x: 104, y: 80};
+AssemblyPlantBuilding.shadow_image_padding = {x: -16, y: -45};
 
 AssemblyPlantBuilding.upgradable = true;
