@@ -7,11 +7,6 @@ function TaelonPowerBuilding(pos_x, pos_y, player)
 	this.res_now = 0;
 	this.res_max = 1000;
 	
-	//Building animation
-	this._draw_last_frame_change = 0;
-	this._draw_cur_frame = 0;
-	this._draw_from_to_pos = [1,2,3,2];
-	
 	this.init(pos_x, pos_y);
 	this.setActionTime(this._proto.build_time);
 	
@@ -44,59 +39,6 @@ function TaelonPowerBuilding(pos_x, pos_y, player)
 	this.onDestructed = function()
 	{
 		game.players[this.player].energyAddMax(-1*this.res_now);
-	}
-	
-	//Custom animated draw function
-	this.draw = function(cur_time)
-	{
-		if (this.state == 'CONSTRUCTION')
-		{
-			game.objDraw.addElement(DRAW_LAYER_GBUILD, this.position.x, {
-				res_key: this._proto.res_key,
-				src_x: 0,
-				src_y: 0,
-				src_width: this._proto.image_size.x,
-				src_height: this._proto.image_size.y,
-				x: this.position.x - this._proto.image_padding.x - game.viewport_x,
-				y: this.position.y - this._proto.image_padding.y - game.viewport_y
-			});
-			game.objDraw.addElement(DRAW_LAYER_TBUILD, this.position.x, {
-				res_key: this._proto.res_key,
-				src_x: this._proto.image_size.x,
-				src_y: 0,
-				src_width: this._proto.image_size.x,
-				src_height: this._proto.image_size.y,
-				x: this.position.x - this._proto.image_padding.x - game.viewport_x,
-				y: this.position.y - this._proto.image_padding.y - game.viewport_y
-			});
-		}
-		else
-		{
-			game.objDraw.addElement(DRAW_LAYER_GBUILD, this.position.x, {
-				res_key: this._proto.res_key,
-				src_x: 0,
-				src_y: this._proto.image_size.y,
-				src_width: this._proto.image_size.x,
-				src_height: this._proto.image_size.y,
-				x: this.position.x - this._proto.image_padding.x - game.viewport_x,
-				y: this.position.y - this._proto.image_padding.y - game.viewport_y
-			});
-			game.objDraw.addElement(DRAW_LAYER_TBUILD, this.position.x, {
-				res_key: this._proto.res_key,
-				src_x: this._draw_from_to_pos[this._draw_cur_frame]*this._proto.image_size.x,
-				src_y: this._proto.image_size.y,
-				src_width: this._proto.image_size.x,
-				src_height: this._proto.image_size.y,
-				x: this.position.x - this._proto.image_padding.x - game.viewport_x,
-				y: this.position.y - this._proto.image_padding.y - game.viewport_y
-			});
-			if ((cur_time - this._draw_last_frame_change)>200)
-			{
-				++this._draw_cur_frame;
-				this._draw_cur_frame %= 4;
-				this._draw_last_frame_change = cur_time;
-			}
-		}
 	}
 	
 	//Custom selection bar
@@ -151,3 +93,7 @@ TaelonPowerBuilding.move_matrix = [0,0,0,0,0,1,0,0,0,1,1,0,0,1,0,0];
 TaelonPowerBuilding.cell_padding = {x: 2, y: 1};
 TaelonPowerBuilding.image_size = {x: 90, y: 123};
 TaelonPowerBuilding.image_padding = {x: -4, y: 33};
+TaelonPowerBuilding.image_animated = true;
+TaelonPowerBuilding.image_animation_frames = [1,2,3,2];
+TaelonPowerBuilding.shadow_image_size = {x: 69, y: 62};
+TaelonPowerBuilding.shadow_image_padding = {x: -49, y: 2};
