@@ -1,3 +1,7 @@
+Build 29 (?)
+- Added shadow for all buildings
+- Small code optimizations
+
 Build 28 (06.02.2013)
 - Preloading right panel images for buildings and units
 - Do not start game load until start screen is loaded completely
